# asb-security-schema

./: .gitignore  README.md  README_zh.md  go.mod
.github/workflows/: ci.yml
examples/: agent_tool-allow.json  agent_tool-deny.json  llm_completion-input.json  rag_search.json
go/securityschema/: schema_embed.go  types.go  validator.go  validator_test.go
policies/: agent.rego  prompt.rego  rag.rego
python/: README.md  pyproject.toml
python/src/asb_security_schema/: __init__.py  builder.py  schema_loader.py  types.py  validator.py
python/src/asb_security_schema/data/: __init__.py  asb-security-schema-v0.1.json
python/tests/: test_validator.py
scripts/: sync_schema_assets.py
spec/: asb-security-schema-v0.1.md
